--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
-    "@babel/register": "^7.7.4"
+    "@babel/register": "^7.7.4",
+    "gulp-babel": "^8.0.0"
   },
   "scripts": {
     "test": "gulp"
