--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-async-generator-functions": "^7.7.4",
     "@babel/register": "^7.7.4",
     "gulp-babel": "^8.0.0"
   },
